[fixed] horizontal scrollbar introduced from DomainPicker-menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ html, body {
     list-style: none;
     padding: 0;
     margin: 0;
+    right: 0;
     position: absolute;
     z-index: 1;
 
